# pfits

./: README.md  configure.ac
config/: cfitsio.m4
src/: Makefile.am  TKnonlinearFit.h  pfits.h  pfitsUtil_copyToNew.c  pfitsUtil_copyToNew_v2.c  pfitsUtil_foldmode_extractFreq.c  pfitsUtil_searchmode_combineFreq.c  pfitsUtil_searchmode_combineTime.c  pfitsUtil_searchmode_extractFreq.c  pfitsUtil_searchmode_filter.c  pfitsUtil_updateMetaData.c  pfits_addFRB.c  pfits_addFRB_1bit.c  pfits_cal.c  pfits_calFold.c  pfits_checkRandom.c  pfits_convertText.c  pfits_convertToBinary.c  pfits_crossCoupling.c  pfits_dedisperse.c  pfits_dedoppler.c  pfits_dumpValues.c  pfits_extract1bit.c  pfits_extractImage.c  pfits_ffa.c  pfits_findSignal.c  pfits_fluxcal.c  pfits_foldImage.c  pfits_foldStatistics.c  pfits_formBandpass.c  pfits_frb.c  pfits_fv.c  pfits_getZeroDM.c  pfits_imageFold.c  pfits_inspect2ghz.c  pfits_loader.c  pfits_makeImages.c  pfits_makeMovie.c  pfits_makeSpectrum.c  pfits_makeTimeMovie.c  (+14 more)
